[tool.poetry]
name = "testgit"
version = "0.1.0"
description = ""
authors = ["onSTRANN1Y <splashilia3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
